feat: add budget CRUD
