# core/planifai-core/src/main/java/com/planifai/core/finance/domain/model/budget/BudgetStatus.java
@@ -1,0 +1,7 @@
+package com.planifai.core.finance.domain.model.budget;
+
+public enum BudgetStatus {
+    OK,
+    WARNING,
+    EXCEEDED
+}
